@@ -1,3 +1,10 @@
+2010-09-07  Andrew Burgess  <aburgess@broadcom.com>
+
+	* ld-x86-64/split-by-file.rd: New test.
+	* ld-x86-64/split-by-file1.s: New test source code.
+	* ld-x86-64/split-by-file2.s: New test source code.
+	* ld-x86-64/x86-64.exp: Run the new test.
+
 2010-08-31  Nick Clifton  <nickc@redhat.com>
 
 	* ld-scripts/section-match.exp: New file.  Runs the
